// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PaginationButton should render component 1`] = `
.c3 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  display: inline-block;
  height: 44px;
  padding: 0 16px;
  border: solid 1px;
  border-color: #121212;
  border-radius: 24px;
  color: #121212;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c3:disabled {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c3:not(:disabled) {
  cursor: pointer;
}

.c3:focus {
  outline-offset: 4px;
}

.c3:not(:disabled):hover {
  border-color: #121212;
  color: #ffffff;
  background-color: #121212;
}

.c3:not(:disabled):active {
  border-color: #17b2a9;
  color: #121212;
  background-color: #17b2a9;
}

.c3[aria-disabled="true"] {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
  cursor: not-allowed;
}

.c3[aria-disabled="true"]:focus,
.c3[aria-disabled="true"]:hover {
  border-color: #ebebeb;
  color: #949494;
  background-color: #ebebeb;
}

.c6 > p {
  margin: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: calc(44px - 2px);
}

.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 24px;
  border-radius: 24px;
  background-color: #f6f6f6;
}

.c2 {
  position: relative;
  width: 250px;
  height: 4px;
  margin-top: 12px;
  border-radius: 4px;
  overflow: hidden;
  background-color: #bfbfbf;
}

.c2::before {
  position: absolute;
  width: 400%;
  height: 100%;
  background-color: #121212;
  content: "";
}

.c4 {
  margin-top: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      id=":r0:"
    >
      <span>
        Showing 
        <b>
          60
        </b>
         out of 
        <b>
          320
        </b>
         events
      </span>
      <div
        class="c2"
      />
    </div>
    <button
      aria-describedby=":r0:"
      class="c3 c4"
      type="button"
    >
      <span
        class="c5"
      >
        <span
          class="c6"
        >
          Show more
        </span>
        <svg
          aria-hidden="true"
          class="c7"
          focusable="false"
          height="1.5em"
          rotate="0"
          viewBox="0 0 24 24"
          width="1.5em"
        >
          <path
            d="M3.47 8.26 4.53 7.2 12 14.67l7.47-7.47 1.06 1.06L12 16.8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`PaginationButton should render component in inverse 1`] = `
.c3 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  display: inline-block;
  height: 44px;
  padding: 0 16px;
  border: solid 1px;
  border-color: #ffffff;
  border-radius: 24px;
  color: #ffffff;
  font-weight: 600;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
}

.c3:disabled {
  border-color: #949494;
  color: #949494;
  background-color: transparent;
  cursor: not-allowed;
}

.c3:not(:disabled) {
  cursor: pointer;
}

.c3:focus {
  outline-offset: 4px;
}

.c3:not(:disabled):hover {
  border-color: #ffffff;
  color: #121212;
  background-color: #ffffff;
}

.c3:not(:disabled):active {
  border-color: #17b2a9;
  color: #121212;
  background-color: #17b2a9;
}

.c3[aria-disabled="true"] {
  border-color: #949494;
  color: #949494;
  background-color: transparent;
  cursor: not-allowed;
}

.c3[aria-disabled="true"]:focus,
.c3[aria-disabled="true"]:hover {
  border-color: #949494;
  color: #949494;
  background-color: transparent;
}

.c6 > p {
  margin: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: calc(44px - 2px);
}

.c7 {
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  -webkit-transition: -webkit-transform 0.2s ease-out;
  -webkit-transition: transform 0.2s ease-out;
  transition: transform 0.2s ease-out;
  fill: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-size: var(--etna-font-size,14px);
  line-height: var(--etna-line-height,18px);
  -webkit-letter-spacing: 0.02em;
  -moz-letter-spacing: 0.02em;
  -ms-letter-spacing: 0.02em;
  letter-spacing: 0.02em;
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 24px;
  border-radius: 24px;
  background-color: #f6f6f6;
}

.c2 {
  position: relative;
  width: 250px;
  height: 4px;
  margin-top: 12px;
  border-radius: 4px;
  overflow: hidden;
  background-color: #bfbfbf;
}

.c2::before {
  position: absolute;
  width: 400%;
  height: 100%;
  background-color: #121212;
  content: "";
}

.c4 {
  margin-top: 12px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      id=":r1:"
    >
      <span>
        Showing 
        <b>
          60
        </b>
         out of 
        <b>
          320
        </b>
         events
      </span>
      <div
        class="c2"
      />
    </div>
    <button
      aria-describedby=":r1:"
      class="c3 c4"
      type="button"
    >
      <span
        class="c5"
      >
        <span
          class="c6"
        >
          Show more
        </span>
        <svg
          aria-hidden="true"
          class="c7"
          focusable="false"
          height="1.5em"
          rotate="0"
          viewBox="0 0 24 24"
          width="1.5em"
        >
          <path
            d="M3.47 8.26 4.53 7.2 12 14.67l7.47-7.47 1.06 1.06L12 16.8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
